--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "repository": "TODO",
   "author": "macinjoke <shunji.makino@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "start": "webpack-dev-server",
+    "build": "webpack"
+  },
   "devDependencies": {
     "@types/graphql": "^14.2.0",
     "@types/react": "^16.8.19",
@@ -19,6 +23,7 @@
     "webpack-dev-server": "^3.6.0"
   },
   "dependencies": {
+    "apollo": "^2.12.5",
     "graphql": "^14.3.1",
     "graphql-tag": "^2.10.1",
     "react": "^16.8.6",
