--- a/package.json
+++ b/package.json
@@ -14,6 +14,13 @@
     "@types/graphql": "^14.2.0",
     "@types/react": "^16.8.19",
     "@types/react-dom": "^16.8.4",
+    "@typescript-eslint/eslint-plugin": "^1.9.0",
+    "@typescript-eslint/parser": "^1.9.0",
+    "eslint": "^5.16.0",
+    "eslint-config-prettier": "^4.3.0",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-react": "^7.13.0",
+    "prettier": "^1.18.2",
     "ts-loader": "^6.0.2",
     "ts-node": "^8.2.0",
     "typescript": "^3.5.1",
